﻿svs 09.04.2015 06:54:08 +0300 - build 4338

1. SQLite 3.8.9

zg 09.04.2015 03:05:55 +0200 - build 4337

1. изолирована обработка нажатия CtrlAltShift.

drkns 05.04.2015 19:07:30 +0200 - build 4336

1. Рефакторинг. Немного переименований и перенос некоторых функций.

drkns 03.04.2015 20:55:27 +0200 - build 4335

1. 0002980: Неисправности в меню "Code pages".

zg 03.04.2015 14:10:08 +0200 - build 4334

1. уточнение 4330.

zg 03.04.2015 13:55:43 +0200 - build 4333

1. уточнение 4332.

zg 03.04.2015 02:57:53 +0200 - build 4332

1. 0002979: Редактирование любых файлов без потерь в режиме UTF-8.

drkns 02.04.2015 23:15:07 +0200 - build 4331

1. Рефакторинг.

2. Из меню дополнения в комстроке не вызывалось меню плагинов.

zg 02.04.2015 16:15:43 +0200 - build 4330

1. с форума: Получить содержимое ком. строки плагином из юзер меню.

w17 01.04.2015 20:26:38 +0300 - build 4329

1. Некорректно работал поиск по словам Find file, если слово попадало ровно на конец блока.

shmuel 29.03.2015 20:49:04 +0200 - build 4328

1. Уточнение 4261.

drkns 28.03.2015 16:51:12 +0200 - build 4327

1. Рефакторинг.

w17 26.03.2015 13:57:16 +0300 - build 4326

1. Уточнение 4324

w17 26.03.2015 13:51:15 +0300 - build 4325

1. Уточнение 4324

w17 25.03.2015 13:23:12 +0300 - build 4324

1. Experimental: Продолжение 3717 (M#2208: Запоминать, в какой папке была запущена команда).
   Новый параметр конфигурации System.PerFolderCmdHistory.
   Умолчание = false, если true - в историю записываюся одинаковые команды
   если каталоги запуска отличаются. В стандартной истории фар дубли команд не показываются.

drkns 21.03.2015 16:50:29 +0200 - build 4323

1. Копирование текста из полей ввода могло вызывать ассерты.

zg 21.03.2015 16:47:45 +0200 - build 4322

1. удалена пасхалка от валентина. если, например, в командной строке ввести магический набор букв: